Added login screen that is accessed from the main activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".AboutActivity" />
         <activity android:name=".EmployeeContactsActivity" />
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".LoginActivity"></activity>
     </application>
 
 </manifest>
