Created basic employer side

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         <activity android:name=".AboutActivity" />
         <activity android:name=".EmployeeContactsActivity" />
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Main2Activity"></activity>
     </application>
 
 </manifest>
