Refactored the main menu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
         <activity android:name=".AboutActivity" />
         <activity android:name=".EmployeeContactsActivity" />
-        <activity android:name=".SettingsActivity" />
+        <activity android:name=".UserInfoActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Main2Activity"></activity>
     </application>
