--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".EmployeeContactsActivity" />
         <activity android:name=".UserInfoActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".Main2Activity"></activity>
+        <activity android:name=".Main2Activity"/>
+        <activity android:name=".NewEmployeeActivity"/>
     </application>
 
 </manifest>
